Wednesday, February 27, 2002	Ron Steinke <rsteinke@w-link.net>

	* Autogen.sh cleanups

Tuesday, February 26, 2002	Ron Steinke <rsteinke@w-link.net>

	* Bump version number to 0.2.5, so we can have an official
	  version needed by the stage patches.

Monday, February 25, 2002	Ron Steinke <rsteinke@w-link.net>

	* Added rotation() functions to RotMatrix<3> and Quaternion
	  which take a single Vector<3> as argument (as opposed to
	  a vector for the rotation axis and an angle), and determine
	  the rotation angle from the length of the vector. This
	  is nice for things like the rotation generated by
	  (angular velocity) * dT, since it handles the zero-length
	  axis case cleanly, and avoids an extra call to sqrt().
	* Fixed an error in atlasconv.h, where specializations
	  of AxisBox<>::fromAtlas() to particular dimensions
	  weren't marked as inline

Friday, February 22, 2002	Ron Steinke <rsteinke@w-link.net>

	* Broke the Polygon<> intersection functions out of
	  polygon_funcs.h and polygon.cpp into the separate
	  files polygon_intersect.h and polygon_intersect.cpp 
	* Moved the implementations of the boundingBox() and
	  boundingSphere() functions in Point out of point_funcs.h
	  into axisbox_funcs.h and ball_funcs.h. This lets me
	  remove the include dependence of Point on AxisBox and Ball.
	* Fixed up list of files included in wfmath.h. It now
	  includes everything but atlasconv.h, which is intentionally
	  excluded.

Wednesday, February 20, 2002	Ron Steinke <rsteinke@w-link.net>

	* Fixed RotBox to match the new sense of RotMatrix<>
	  rotation, still need to look at its interaction
	  with Polygon<> to get that right
	* Wrote Intersect(RotBox, AxisBox) for 2d, 3d
	* Removed a needless <iostream> dependency from atlasconv.h
	* Bump version number to 0.2.4

Sunday, February 17, 2002	Ron Steinke <rsteinke@w-link.net>

	* Some doc fixes
	* Added a #warning about using the Polygon<> Intersect()
	  and Contains() functions
